# improved-potato

./: CMakeLists.txt  README.md  libs.h  main.cpp
Graphics/: ImageReader.cpp  ImageReader.h  Window.cpp  Window.h
Graphics/Rendering/: Object.h  Renderer.cpp  Renderer.h
Graphics/Rendering/Primitives/: Shape.cpp  Shape.h
Graphics/Shader/: Shader.cpp  Shader.h
Utils/: Timer.cpp  Timer.h
win32/: packages.config  win32.sln  win32.vcxproj  win32.vcxproj.filters
