cmake_minimum_required(VERSION 3.6)
project(improved-potato)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp Graphics/Window.h Graphics/Window.cpp Graphics/Rendering/Renderer.cpp Graphics/Rendering/Renderer.h Graphics/Rendering/Object.h Graphics/Rendering/Primitives/Shape.cpp Graphics/Rendering/Primitives/Shape.h libs.h)
add_executable(improved-potato ${SOURCE_FILES})

find_package(GLEW REQUIRED)
if (GLEW_FOUND)
    include_directories(${GLEW_INCLUDE_DIRS})
    link_libraries(${GLEW_LIBRARIES})
endif()
target_link_libraries(improved-potato glfw GL ${GLEW_LIBRARIES})


#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${improved-potato_SOURCE_DIR})
#set(GLUS_INCLUDE_DIR ../GLUS/src)
#set(GLUS_LIBRARY_DIR ../GLUS/CMakeFiles/GLUS.dir/src)
#set(CMAKE_MODULE_PATH ../GLUS/CMakeFiles/GLUS.dir/src)
#set(GLUS_INCLUDE_DIR ../GLUS/src)
#set(GLUS_LIBRARY_DIR ../GLUS/CMakeFiles/GLUS.dir/src)
#find_library(GLUS REQUIRED)
#if(GLUS_FOUND)
#    include_directories(${GLUS_INCLUDE_DIR})
#    link_directories(${GLUS_LIBRARY_DIR})
#endif()
#set(GLUS_INCLUDE_DIR ../GLUS/src)
#include_directories(${GLUS_INCLUDE_DIR})
#set(GLUS_LIBRARY_DIR ../GLUS/src)
#link_directories(${GLUS_LIBRARY_DIR})
#if(GLUS_FOUND)
    #include_directories(${GLUS_INCLUDE_DIR})
    #link_directories(../GLUS/src)
#endif()
#file(GLOB_RECURSE H_FILES ${improved-potato_SOURCE_DIR}/src/*.h)
#file(GLOB_RECURSE CPP_FILES ${improved-potato_SOURCE_DIR}/src/*.cpp)
#include_directories(${GLUS_INCLUDE_DIR})
#link_directories(${GLUS_LIBRARY_DIR})

